[gd_scene load_steps=5 format=3 uid="uid://5i16ushsqe5v"]

[ext_resource type="Script" uid="uid://bubt43gelp8kk" path="res://frontend/scripts/main_scene.gd" id="1_6hmje"]
[ext_resource type="Script" uid="uid://bo27wk2nic5m5" path="res://frontend/scripts/Design_Button.gd" id="4_3v8fw"]

[sub_resource type="GDScript" id="GDScript_jheov"]
script/source = "extends Button
func _ready() -> void:
	var normal = StyleBoxFlat.new()
	normal.bg_color = Color(0,0,0,0)
	normal.corner_radius_top_left = 8
	normal.corner_radius_top_right = 8
	normal.corner_radius_bottom_left = 8
	normal.corner_radius_bottom_right = 8

	add_theme_stylebox_override(\"normal\", normal)

	var hover = normal.duplicate()
	hover.bg_color = Color(\"#390879\")  
	add_theme_stylebox_override(\"hover\", hover)
func _on_button_pressed():
	var child_node = $ChildNodeName
	var child_data = child_node.get_meta(\"Name\")
	print(child_data)
	#get_tree().change_scene_to_file(\"res://backend/3d/individual/{}\")
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivsrt"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6hmje")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1138.0
offset_bottom = 634.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 25
text = "Menu
"
script = SubResource("GDScript_jheov")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 317.0
offset_bottom = 318.0

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Menu"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Planets" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 36
text = "Planetas"
script = ExtResource("4_3v8fw")

[node name="sys_Solar" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 36
text = "Sistema a escala
"
script = ExtResource("4_3v8fw")
metadata/scene = "solar_sys.tscn"

[node name="Return" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ivsrt")
text = "Volver"
script = ExtResource("4_3v8fw")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 212.0
offset_bottom = 468.0

[node name="Label" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Lista de planetas"
horizontal_alignment = 1

[node name="Sun" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 26
text = "Sol"
script = ExtResource("4_3v8fw")
metadata/scene = "sun.tscn"

[node name="Mercury" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 26
text = "Mercurio"
script = ExtResource("4_3v8fw")
metadata/scene = "mercury.tscn"

[node name="Venus" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 26
text = "Venus"
script = ExtResource("4_3v8fw")
metadata/scene = "venus.tscn"

[node name="Earth" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 26
text = "Tierra"
script = ExtResource("4_3v8fw")
metadata/scene = "earth.tscn"

[node name="Mars" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 26
text = "Marte"
script = ExtResource("4_3v8fw")
metadata/scene = "mars.tscn"

[node name="Jupiter" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 26
text = "Jupiter"
script = ExtResource("4_3v8fw")
metadata/scene = "jupiter.tscn"

[node name="Saturn" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 26
text = "Saturno"
script = ExtResource("4_3v8fw")
metadata/scene = "saturn.tscn"

[node name="Neptune" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 26
text = "Neptuno"
script = ExtResource("4_3v8fw")
metadata/scene = "neptune.tscn"

[node name="Return2" type="Button" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.73333335, 0.87058824, 0.05882353, 1)
theme_override_font_sizes/font_size = 26
text = "Volver"
script = ExtResource("4_3v8fw")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Planets" to="." method="_on_planetas_pressed"]
[connection signal="pressed" from="VBoxContainer2/sys_Solar" to="VBoxContainer2/sys_Solar" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer3/Sun" to="VBoxContainer3/Sun" method="on_sun_pressed"]
[connection signal="pressed" from="VBoxContainer3/Mercury" to="VBoxContainer3/Mercury" method="on_sun_pressed"]
[connection signal="pressed" from="VBoxContainer3/Venus" to="VBoxContainer3/Venus" method="on_sun_pressed"]
[connection signal="pressed" from="VBoxContainer3/Earth" to="VBoxContainer3/Earth" method="on_sun_pressed"]
[connection signal="pressed" from="VBoxContainer3/Mars" to="VBoxContainer3/Mars" method="on_sun_pressed"]
[connection signal="pressed" from="VBoxContainer3/Jupiter" to="VBoxContainer3/Jupiter" method="on_sun_pressed"]
[connection signal="pressed" from="VBoxContainer3/Saturn" to="VBoxContainer3/Saturn" method="on_sun_pressed"]
[connection signal="pressed" from="VBoxContainer3/Neptune" to="VBoxContainer3/Neptune" method="on_sun_pressed"]
[connection signal="pressed" from="VBoxContainer3/Return2" to="." method="_on_volver_2_pressed"]
